# truthtable

./: truthtable.cabal
Data/: BitMatrix.hs  BitVector.hs
