
name:                truthtable
version:             0.1.0.0
synopsis:            Truth tables
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.BitVector,
    Data.BitMatrix
  ghc-options:        -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields
  build-depends:      base >=4.8
                    , text
                    , vector
  default-language:    Haskell2010
